--- a/index.html
+++ b/index.html
@@ -4,40 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
+    <meta name="description" content="Portfolio of a web developer showcasing projects and skills.">
+    <meta name="keywords" content="web developer, portfolio, projects, contact">
+    <meta name="author" content="Your Name">
 </head>
 <body>
-    <header>
-        <nav>
+    <header role="banner">
+        <h1>My Portfolio</h1>
+        <nav role="navigation" aria-label="Main Navigation">
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="#CV">CV</a></li>
             </ul>
         </nav>
     </header>
-    <section id="about">
-        <h1>About Me</h1>
-        <p>Welcome to my portfolio! I am a web developer...</p>
-    </section>
-    <section id="projects">
-        <h1>Projects</h1>
-        <div class="project">
-            <h2>Project 1</h2>
-            <p>Description of project 1...</p>
-        </div>
-        <div class="project">
-            <h2>Project 2</h2>
-            <p>Description of project 2...</p>
-        </div>
-    </section>
-    <section id="contact">
-        <h1>Contact</h1>
-        <p>Email: example@example.com</p>
-    </section>
-    <footer>
+
+    <main>
+        <section id="about" role="region" aria-labelledby="about-heading">
+            <h2 id="about-heading">About Me</h2>
+            <p>Hello! I'm a cyber security analyst with a passion for protecting digital assets and ensuring the confidentiality, integrity, and availability of information systems.</p>
+        </section>
+
+        <section id="projects" role="region" aria-labelledby="projects-heading">
+            <h2 id="projects-heading">Projects</h2>
+            <div id="project-list"></div>
+        </section>
+
+        <section id="contact" role="region" aria-labelledby="contact-heading">
+            <h2 id="contact-heading">Contact</h2>
+            <p>Email: nguyenthanhcong012002@gmail.com</p>
+        </section>
+    </main>
+
+    <footer role="contentinfo">
         <p>&copy; 2023 My Portfolio</p>
+        <ul>
+            <li><a href="https://x.com/thanhCong1425" target="_blank" rel="noopener noreferrer">Twitter</a></li>
+            <li><a href="https://www.linkedin.com/in/congnguyen14/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+            <li><a href="https://github.com/pakaremon" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+        </ul>
     </footer>
-    <script src="scripts.js"></script>
+
+    <script src="./scripts.js"></script>
 </body>
 </html>
